syntax = "proto3";

package banners;

import "google/protobuf/empty.proto";

option go_package = "github.com/Arkosh744/banners/pkg/banners_v1";

service Banners {
  rpc CreateSlot(CreateSlotReq) returns (SlotResp) {}
  rpc CreateBanner(CreateBannerReq) returns (BannerResp) {}
  rpc CreateGroup(CreateGroupReq) returns (GroupResp) {}

  rpc AddBannerToSlot(BannerSlotRequest) returns (google.protobuf.Empty) {}
  rpc DeleteBannerFromSlot(BannerSlotRequest) returns (google.protobuf.Empty) {}

  rpc CreateClickEvent(ClickEvent) returns (google.protobuf.Empty) {}
  rpc NextBanner(NextBannerRequest) returns (BannerResp) {}
}

message CreateSlotReq {
  string description = 1;
}

message CreateBannerReq {
  string description = 1;
}

message CreateGroupReq {
  string description = 1;
}

message SlotResp {
  int64 id = 1;
  string description = 2;
}

message BannerResp {
  int64 id = 1;
  string description = 2;
}

message GroupResp {
  int64 id = 1;
  string description = 2;
}

message BannerSlotRequest {
  int64 slot_id = 1;
  int64 banner_id = 2;
}

message ClickEvent {
  int64 slot_id = 1;
  int64 banner_id = 2;
  int64 group_id = 3;
}

message NextBannerRequest {
  int64 slot_id = 1;
  int64 group_id = 2;
}
